app/assets/scss/guide/_kss.scss
/* Sidebar */

.kss-doc-title {
  margin-top: 0;

  font-size: $kss-unit-medium;
}

.kss-sidebar {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  z-index: 500;

  width: em($kss-sidebar);
  padding: 1.5em;

  color: white;
  background-color: black;

  overflow-y: auto;
}

.kss-nav__menu {
  padding-left: 0;
  list-style-type: none;

  a:link, a:visited {
    color: $kss-color-light;
  }
  a:hover, a:active {
    color: white;
  }
}

.kss-nav__menu-item {
  line-height: $kss-row;
  border-top: $kss-stroke solid #333;
}

.kss-nav__ref {
  margin-right: 1em;
}

.kss-nav__menu-child {
  list-style-type: none;
  padding-left: 0;

  font-size: $kss-unit-small;

  a:link, a:visited {
    color: $kss-color-medium;
  }
  a:hover, a:active {
    color: $kss-color-light;
  }
}

/* Main content */

.kss-main {
  @include reset-children;

  padding: 1.5em;
  margin-left: em($kss-sidebar);
}

.kss-overview {
  @include reset-children;
}

.kss-item--depth-1 {
  margin-bottom: 25vmin;
}

.kss-item--depth-2 {
  margin-top: 3em;
}

.kss-bar {
  display: flex;
  align-items: center;

  margin-bottom: 1em;
}

.kss-bar__content {
  flex-grow: 1;

  @include reset-children;
}

.kss-bar__side {
  min-width: em(200);

  margin-left: 1em;
}

/* Variant layout */

.kss-variant {
  @include padding(1em null);

  &:not(:first-child) {
    border-top: 1px solid $kss-color-light; 
  }
}

.kss-variant__example {
  overflow: auto;
}

.kss-variant__description {
  float: right;
  width: em(200);

  margin-left: 1em;
}

/* Typography */

.kss-variant__title {
  margin-top: 0;
  margin-bottom: .25em;

  font-size: $kss-unit-small;

  color: $kss-color-dark;
}

.kss-small {
  display: block;

  color: $kss-color-medium;

  p {
    @include margin(0 null);
  }
}

.kss-title__permalink {
  text-decoration: none;
}

.kss-title__permalink-hash {
  visibility: hidden;

  color: $kss-color-light;

  .kss-title__permalink:hover &,
  .kss-title__permalink:active & {
    visibility: visible;
  }
}

.kss-markup {
  @include clearfix;

  margin-top: 1em;

  font-size: $kss-unit-small;
}

.kss-toggle {
  float: left;

  margin-right: 1em;
}

.kss-preformat {
  display: none;

  .kss-markup--open & {
    display: block;
  }
}

